# json-cgal

./: .gitignore  CMakeLists.txt  README.md
Scripts/: json_cgal.py  points.json  schema.json
src/: CGAL_Types.h  CMakeLists.txt  JsonCGAL.cpp  JsonCGAL.h  JsonCGALMap.h  JsonCGALTypes.cpp  JsonCGALTypes.h  JsonLine.cpp  JsonLine.h  JsonPoint.cpp  JsonPoint.h  JsonSegment.cpp  JsonSegment.h  cgal_kernel_config.h
test/: CMakeLists.txt  JsonGeometry-test.cpp
